# pep-workshop

./: .gitignore  app.py  booking.json  pyproject.toml
.github/workflows/: tests.yml
src/: configs.py
src/model/: bookings.py
tests/: conftest.py
tests/auth/: conftest.py  result.xml  test_invalid.py  test_valid.py
tests/booking/: conftest.py  test_get_bookings_ids.py
tests/ping/: conftest.py  test_ping.py
